--- a/style.css
+++ b/style.css
@@ -1,66 +1,90 @@
 body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    background-color: rgb(22, 22, 51);
 }
 section{
-    height: 500px;
-    padding-bottom: 170px;
+    height: 250px;
+    padding-bottom: 50px;
 }
 .top-banner{
-    background-image: url("images/top-banner.png");
-    background-repeat: no-repeat;
 }
 .half-width{
-    width:40%;
+    width:35%;
     float: left;
-    margin-left: 5%;
-    padding-left: 2%;
+    margin-left: 0%;
+    padding-left: 5%;
 }
 h1{
     font-size: 50px;
 }
 h1 span{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 .half-width img{
     width: 100%;
+}
+.pic-test img{
+    height: 8%;
+    width: 15%;
+    align-content: center;
+}
+.pic-test2 img{
+    width: 22%;
+    height: 36%;
+    position: absolute;
+    right: 15%;
+    top: 5%;
+    
 }
 .anchor-button{
     text-decoration: none;
     background: linear-gradient(45deg, rgb(42, 63, 125), rgb(100, 22, 8));
     padding: 10px 40px;
-    border-radius: 5px;
+    border-radius: 0px;
     color: white;
     font-weight: 700;
 }
 p{
-    color: dimgray;
+    color: rgb(255, 255, 255);
 }
 .dream-area{
     background-image: url("images/dream-bg.png");
+    background-size: 5%;
     background-repeat: no-repeat;
     background-position: right;
+
+}
+.end{
+    margin-bottom: 30%;
 }
 h2{
     font-size: 40px;
+    color: rgb(255, 251, 251);
+}
+h3{
+    font-size: 15px;
+    color: rgb(255, 251, 251);
 }
 .experience-area{
     background-image: url("images/exp-bg.png");
     background-repeat: no-repeat;
     background-position: left;
+    margin-left: 1%;
+
 }
 .experience-area h3{
-    color: rgb(59, 49, 137);
+    color: rgb(255, 255, 255);
 }
 
 .experience-area div{
-    box-shadow: 5px 7px 40px gray;
+    box-shadow: 5px 7px 40px rgb(98, 37, 37);
     padding: 10px 40px;
     border-radius: 5px;
-    height: 70%;
+    height: 85%;
 }
 #full-stack{
-    border-left: 7px solid rgb(59, 49, 122);
+    border-left: 7px solid rgb(251, 251, 251);
 }
 #baby-web{
     border-left: 7px solid;
@@ -69,4 +93,6 @@ h2{
 }
 footer p{
     text-align: center;
+    justify-content: flex-end;
+    align-content: flex-end;
 }
