--- a/style.css
+++ b/style.css
@@ -32,9 +32,8 @@ h1 span{
 .pic-test2 img{
     width: 11%;
     height: 18%;
-    position: absolute;
-    right: 30%;
-    top: 5%;
+    position: relative;
+    left: 60%;
     
 }
 .anchor-button{
@@ -56,7 +55,12 @@ p{
 
 }
 .end{
-    margin-bottom: 30%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    left: 33%;
+    top: 185%;
+    
 }
 h2{
     font-size: 40px;
@@ -92,7 +96,8 @@ h3{
     border-image-slice: 1;
 }
 footer p{
-    text-align: center;
+
     justify-content: flex-end;
-    align-content: flex-end;
+    align-self: flex-end;
+
 }
