--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ h1 span{
     align-content: center;
 }
 .pic-test2 img{
-    width: 11%;
-    height: 18%;
-    position: relative;
-    left: 60%;
+    width: 12%;
+    height: 20%;
+    position: absolute;
+    left: 56%;
+    top: 0;
     
 }
 .anchor-button{
@@ -57,7 +58,6 @@ p{
 .end{
     position: absolute;
     bottom: 0;
-    
 }
 h2{
     font-size: 40px;
@@ -92,9 +92,11 @@ h3{
     border-image: linear-gradient(blue 100%, cyan 100%);
     border-image-slice: 1;
 }
-footer p{
-
-    justify-content: flex-end;
-    align-self: flex-end;
-
-}
+#footer {
+    position: fixed;
+    bottom: 0;
+    left: 30%;
+    width: 100%;
+    height: 60px;   /* Height of the footer */
+    color: rgb(255, 255, 255);
+ }
