--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ section{
     height: 250px;
     padding-bottom: 50px;
 }
+footer{
+
+}
 .top-banner{
 }
 .half-width{
@@ -93,10 +96,10 @@ h3{
     border-image-slice: 1;
 }
 #footer {
-    position: fixed;
+    position: absolute;
+    left: 0;
     bottom: 0;
-    left: 30%;
     width: 100%;
-    height: 60px;   /* Height of the footer */
-    color: rgb(255, 255, 255);
+    color: white;
+    text-align: center;
  }
