--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ h1 span{
     height: 18%;
     position: relative;
     left: 40%;
+    object-fit: cover; /*magic*/
 
-    
 }
 .anchor-button{
     text-decoration: none;
