--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ footer{
 img {
     max-width: 100%;
     height: auto;
-    width: auto/9;
+    width: auto;
 }
 .top-banner{
     margin-left: 0%;
